// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> default matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bdcYgg k-Form-Checkbox"
>
  <input
    className="k-Form-Checkbox__input"
    disabled={false}
    id="test-checkbox"
    type="checkbox"
  />
  <label
    className="sc-bdVaJa bDWFJH k-Form-Checkbox__label"
    htmlFor="test-checkbox"
  >
    Label
  </label>
</div>
`;

exports[`<Checkbox /> whith label and children props matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bdcYgg k-Form-Checkbox"
>
  <input
    className="k-Form-Checkbox__input"
    disabled={false}
    id="test-checkbox"
    type="checkbox"
  />
  <label
    className="sc-bdVaJa bDWFJH k-u-weight-regular k-Form-Checkbox__label"
    htmlFor="test-checkbox"
  >
    Main label
  </label>
  <span
    className="sc-bdVaJa bDWFJH k-Form-Checkbox__content"
  >
    Secondary content
  </span>
</div>
`;

exports[`<Checkbox /> with label prop matches with snapshot 1`] = `
<div
  className="sc-bwzfXH bdcYgg k-Form-Checkbox"
>
  <input
    className="k-Form-Checkbox__input"
    disabled={false}
    id="test-checkbox"
    type="checkbox"
  />
  <label
    className="sc-bdVaJa bDWFJH k-Form-Checkbox__label"
    htmlFor="test-checkbox"
  >
    Test label
  </label>
</div>
`;
